Fix navbar being overlapped by other elements, add margin-bottom to ADD form

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ nav {
   border-bottom: 1px solid #e8e8e8;
   position: fixed;
   width: 100%;
+  z-index: 100;
 }
 
 nav > div {
@@ -169,7 +170,7 @@ nav ul li a:hover,
   height: 3.5rem;
   border: 5px solid #307bbe;
   border-radius: 50%;
-  z-index: 100;
+  z-index: 1;
 }
 
 .book-progress-text {
@@ -237,6 +238,7 @@ nav ul li a:hover,
   padding-top: 30px;
   border-top: 3px solid #e6e6e6;
   color: #888;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.25rem;
 }
 
@@ -244,6 +246,7 @@ nav ul li a:hover,
   width: 100%;
   display: flex;
   gap: 2.125rem;
+  margin-bottom: 10rem;
 }
 
 .book-add-title {
